# camp-management-system

./: .gitignore  README.md  manage.py  pyproject.toml
applicant/: admin.py  models.py  serializers.py  urls.py  views.py
applicant/migrations/: 0001_initial.py  0002_personal_user.py  0003_auto_20221230_0811.py  0004_auto_20221230_0837.py  0005_auto_20221230_1015.py  0006_auto_20230102_0511.py  0007_alter_applicant_reviewers.py  0008_auto_20230102_0604.py  0009_alter_applicant_self_introduction.py  0009_auto_20230102_0633.py  0010_auto_20230102_0651.py  0011_alter_applicant_reviewers.py  0012_merge_20230102_1213.py  0012_merge_20230102_1349.py  0013_merge_20230102_1433.py  0014_auto_20230102_1512.py  0015_auto_20230103_1259.py  0016_alter_applicant_emerge_phone_and_more.py  0016_auto_20230103_1754.py  0017_alter_applicant_agreement_alter_applicant_picture.py  0018_merge_20230104_1139.py
camp_management_system/: settings.py  urls.py  views.py
frontend/: README.md  nuxt.config.js  package.json  tsconfig.json
frontend/components/: Jayinnn.vue  VuetifyLogo.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue  login.vue  overview.vue  review.vue
scripts/: applicant_data.csv  load_file.py
